# text_to_speech

./: .gitignore  QApair1.pkl  README.md  main.py  pyproject.toml  utils.py
adapters/google_adapters/: google_environment_loader.py  google_tts_adapter.py
config/: settings.py
handlers_and_protocols/: handlers.py  protocols.py
src/: audio_processor.py  document_processor.py  pipeline.py
tests/: test_bypass.py  test_chirp3.py
